[package]
name = "myapp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
myapp-common = { path = "../myapp-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
network-types = "0.0.5"
log = "0.4"
bytes = "1"
tokio = { version = "1.32", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "io-util"] }

[[bin]]
name = "myapp"
path = "src/main.rs"
